# spring-boot-native

./: .gitignore  .sdkmanrc  .springjavaformatconfig  CHECKLIST.md  README.md  access-filter.json  compile.sh  compose.yaml  run.sh  scp.sh  settings.gradle.kts
books/: build.gradle.kts
books/src/main/java/wf/garnier/nativedemo/: BooksApplication.java  SimpleApplication.java
books/src/main/resources/: application.yml
books/src/main/resources/templates/: admin.html  book-list.html  book-simple.html  book.html  hugo.html
books/src/main/resources/templates/layout/: header.html
buildpacks/: build.gradle.kts
buildpacks/src/main/resources/: application.properties
dockerfiles/: Dockerfile  Dockerfile-alpine  Dockerfile-arm64  Dockerfile-x86
examples/: build.gradle.kts  compose.yml
examples/src/main/resources/: application.yml  compose.yml
examples/src/main/resources/templates/: authorization.html  beans.html  index.html  json.html  templating.html
examples/src/test/resources/mockito-extensions/: org.mockito.plugins.MockMaker
native/: build.gradle.kts
native/src/main/java/wf/garnier/nativedemo/: HelloController.java  (+1 more)
native/src/main/resources/: application-question.yml  application.properties  application.yml
perf/: README.md  locustfile.py  locustfile_parallel.py  pyproject.toml  reference.sh  run-perf-test.sh  start-dashboard.sh
simple/: build.gradle.kts  compose.yml
simple/src/main/resources/: application.yml
simple/src/main/resources/templates/: admin.html  book-list.html  book.html  hugo.html
single-class/: .gitignore
slides/: slides.md
(+81 files in other folders)
